--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./public/less/main.css">
 </head>
-<body>
+<body ng-app="yike">
 	<div class="viewport">
 		<!-- 侧边导航 -->
-		<div class="navs">
+		<div  ng-class="{navs:true,collapse:left}"><!-- 加类,改变类collapse的值,来改变左导航栏是否显示 -->
 			<dl>
 				<dt class="login">
 					<div class="avatar">
@@ -56,13 +56,15 @@
 		</div>
 		<div class="container">
 			<!-- 头部 -->
-			<div class="header">
-				<a href="javascript:;" class="menu icon-menu"></a>
+			<!-- 加类,改变类collapse的值,来改变头部 是否显示 -->
+			<div  ng-class="{header:true,collapse:left}">
+				<!-- 点击头部 a 三条横杠的链接,触发(左导航/头部/主体内容)整个面板  显示和隐藏 -->
+				<a href="javascript:;" class="menu icon-menu" ng-click="toggle();"></a>
 				<h2>今日一刻</h2>
 				<a href="javascript:;" class="search icon-search"></a>
 			</div>
 			<!-- 主体 -->
-			<div class="body">
+			<div ng-class="{body:true,collapse:left}"><!-- 加类,改变类collapse的值,来改变主体是否显示 -->
 				<div class="item">
 					<!-- 日期分类 -->
 					<div class="mark">13Aug</div>
@@ -155,5 +157,7 @@
 		</div>
 	</div>
 	<!-- <script src="./public/libs/toggle.js"></script> -->
+	<script src="bower_components/angular/angular.min.js"></script>
+	<script src="scripts/app.js"></script>
 </body>
 </html>
